Put more content in sidebar, fixed the bgcolor and padding, replaced margin property with gap property, added scrollbar.

--- a/HTML/styles/general.css
+++ b/HTML/styles/general.css
@@ -3,7 +3,8 @@
 }
 body {
   font-family: Roboto, Arial;
-  background-color: rgb(0, 0, 0);
+  font-weight: 500;
+  background-color: #0F0F0F;
   padding: 112px 15px 0 255px;
 }
 
