--- a/HTML/styles/nav.css
+++ b/HTML/styles/nav.css
@@ -1,28 +1,36 @@
 .sidebar {
-  background-color: green;
+  background-color: #0F0F0F;
   position: fixed;
   left: 0;
   top: 55px;
   bottom: 0;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   color: white;
   z-index: 100;
   width: 240px;
+  overflow-x: hidden;
+  overflow-y: scroll; /*if content overflows, automatically creates scrollbar. Better than overflow: scrollbar if you dont want all scrollbar showing regardless of the content*/
+  scrollbar-width: thin;
+  scrollbar-color: #0F0F0F #0F0F0F;
+}
+
+.sidebar:hover {
+  scrollbar-width: thin;
+  scrollbar-color: #aaaaaa #0F0F0F;
 }
 
 .sidebar-1 {
 
 }
 
-.sidebar-1, .sidebar-2, .sidebar-3, .sidebar-4 {
- padding-top: 10px;
- padding-bottom: 10px;
+.sidebar-1, .sidebar-2, .sidebar-3, .sidebar-4, .sidebar-5 {
+ padding: 12px 12px 12px 12px;
 }
 
-.sidebar-2, .sidebar-3, .sidebar-4 {
+.sidebar-2, .sidebar-3, .sidebar-4, .sidebar-5 {
   border-top-style: solid;
-  border-color: rgb(172, 170, 170);
+  border-color: #aaaaaa60;
   border-width: 1px;
 }
 
@@ -30,16 +38,26 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0 20px 0 20px;
-  height: 42px;
+  padding: 0 12px 0 12px;
+  height: 40px;
+  gap: 24px;
+  cursor: pointer;
 }
 
-.sidebar-sec div {
-  margin-left: 20px;
+.sidebar-sec:hover {
+  background-color: #aaaaaa36;
+  border-radius: 12px;
+  transition: background-color 0.1s;/*move this to js for desired button click release to work*/
+}
+
+.sidebar-sec:active {
+  background-color: #aaaaaa65;
+  box-shadow: inset 0 0 1.2px rgb(255, 255, 255);/*move this to js for desired button click release to work*/
+  transition: background-color 0.1s;
 }
 
 .side-top {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
 }
 
@@ -58,7 +76,7 @@
 
 .side-profile img {
   border-radius: 13px;
-  width: 28px;
+  width: 24px;
 }
 
 .side-profile div {
